--- a/packages/@sanity/components/src/edititem/styles/PopOver.css
+++ b/packages/@sanity/components/src/edititem/styles/PopOver.css
@@ -49,7 +49,7 @@
 
 .inner {
   display: block;
-  z-index: var(--zindex-popover);
+  z-index: var(--zindex-portal);
   position: fixed;
   top: 0;
   left: 0;
@@ -203,7 +203,7 @@
   top: 0;
   width: 100%;
   left: 0;
-  z-index: var(--zindex-popover);
+  z-index: var(--zindex-portal);
 
   @media (--screen-medium) {
     display: none;
